objects/WebCart.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Carts</relationshipLabel>
        <relationshipName>Carts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Custom_Message_Text__c</fullName>
        <label>Custom Message Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Custom_Message_Type__c</fullName>
        <label>Custom Message Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Info</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Order_Type__c</fullName>
        <label>Order Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Preorder</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SDO_SCOM_OOA_Credit_Override_Status__c</fullName>
        <label>B2B Credit Override Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Awaiting Response</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Denied</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SDO_SCOM_OOA_Products_Override_Status__c</fullName>
        <label>B2B Products Override Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Awaiting Response</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Denied</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SDO_SCOM_Old_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Old Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Carts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SDO_SCOM_Shared__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Shared</label>
        <type>Checkbox</type>
    </fields>
    <sharingModel>Private</sharingModel>
</CustomObject>